--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -1,5 +1,52 @@
-/* General setup */
+/* TO GET AN IDEA OF THE CSS YOU WILL LIKELY BE USING, SEE THE LISTS BELOW. */
 
+        /* 
+        
+        Spacing 
+
+            - padding (shorthand and/or specific properties like padding-bottom, etc.)
+
+            - margin, (shorthand and/or specific properties like margin-top, etc.)
+
+            - letter-spacing, word-spacing, line-height
+
+            - width, max-width, min-width
+            - height, max-height, min-height
+
+        Typography 
+
+            - font-family, font-size, font-style, font-weight
+
+            - text-decoration, text-align
+
+            - color
+
+            - text-shadow, text-transform
+
+        Box, Layout and Border 
+
+            - border (shorthand and/or specific properties like border-top, border-bottom-radius, border-width, etc.)
+
+            - box-shadow
+
+            - display, float, align-items, align-content
+
+            - grid-template-columns, grid-column-gap
+
+            - transform
+
+        Other
+
+            - :nth()-child (to target specific child elements)
+
+            - :focus, :hover, :active (to target link states)
+
+            - @font-face or @import (to import typefaces)
+
+        */
+
+
+/* ------ START WRITING YOUR CODE BELOW ------ */
 * {
     box-sizing: border-box;
 }
@@ -23,7 +70,7 @@ main {
 }
 
 section {
-    float: right;
+    float: left;
     min-width: 22.5rem;
     width:50%;
 }
@@ -46,12 +93,18 @@ figcaption {
 .long-list {
     margin-top:0;
 }
-
-nav {
-    float: left;
-    width:11.25rem;
+nav{
+    font-size:2rem;
+    word-spacing: 5rem;
+    padding-right: 3rem;
+    margin-right: 2rem;
+    margin-left: 2rem;
 }
 
+li{
+    font-size: 2rem;
+    display: inline-block;
+}
 footer {
     clear: both;
     margin-top:1.5rem;
@@ -143,45 +196,16 @@ a:focus {
 a:hover {
     text-decoration: none;
    }
-
-/* List Styling Done */
-ul {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-right: 0rem;
-    margin-left: 0rem;
-    list-style-type: square;
-}
-
-ol {
-    margin-top: 1rem;
-    margin-bottom: 1rem;
-    margin-right: 0rem;
-    margin-left: 0rem;
-    list-style-type: lower-alpha;
-}
-
-.long-list a:hover {
-    text-transform: uppercase;
-}
-
-/* Navigation Menu Done */
-nav {
-    padding-left: 0rem;
-    margin-top: .25rem;
-}
-
 nav a{
+    word-spacing: 5rem;
     text-decoration: none;
     display: inline-block;
     width: 100%;
     line-height: 3;
     text-align: center;
-    font-size: 1.125rem;
+    font-size: 1.5rem;
     margin-bottom: 1.5rem;
-    border: solid;
-    border-width: .0625rem;
-    border-color: #33658A;
+    
 }
 
 nav a:focus {
@@ -204,7 +228,3 @@ nav a:active {
 footer {
     text-align: center;
 }
-
-
-
-
