skills check 7 part three
did more work
ask about:
space at top
change the blog button
line up the footer text

--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -65,6 +65,19 @@ h1, h2, h3, h4 {
     background-color: red;
     box-shadow: 5px 5px 4px -1px #888
 }
+
+button {
+    font-family: rozhaone, Georgia, 'Times New Roman', serif;
+    background-color: blue;
+    color: white;
+    font-size: 1.5rem;
+    border: black solid;
+    border-radius: .5rem .5rem .5rem .5rem;
+    box-shadow: 5px 5px 4px -1px #888;
+    padding: .65rem 1rem .65rem 1rem;
+    margin: 1rem;
+}
+
 h1 {
     font-family: josefinslab, Arial, serif;
     letter-spacing: .125rem;
@@ -76,6 +89,17 @@ h1 {
 }
 h2 {
     padding: 1.75rem 0 0 0 ;
+}
+
+.expand {
+    font-size: .3rem;
+    text-decoration: none;
+    padding-left: .125rem;
+}
+
+.datetime {
+    font-size: .75rem;
+    font-style: italic;
 }
 
 /*general setup*/
@@ -107,7 +131,6 @@ nav a{
 a {
     outline: none;
 }
-
 
 a:link {
     color: #33658A;
@@ -167,7 +190,7 @@ figure {
 }
 
 .article-image {
-    width: 33%;
+    width: 40%;
     float: left;
     margin-right: 1rem;
 }
@@ -185,7 +208,7 @@ figure {
 }
 
 aside figure{
-    width: 75%;
+    width: 70%;
     background-color: bisque;
 }
 
@@ -206,12 +229,16 @@ a:focus {
 a:hover {
     text-decoration: none;
    }
+
+footer {
+    padding-top: 4rem;
+}
 footer p {
     text-align: left;
     font-size: .75rem;
 }
 
-footer figcaption {
+footer figcaption p {
     text-align: right;
     font-size: .75rem;
 }
