--- a/blog/css/style.css
+++ b/blog/css/style.css
@@ -45,6 +45,7 @@
 
 p {
     font-family: lato, Arial, Helvetica, sans-serif;
+    margin: 0 0 1rem 0;
 }
 
 h1, h2, h3, h4 {
@@ -54,7 +55,7 @@ h1, h2, h3, h4 {
 
 .highlight {
     font-family: rozhaone, Georgia, serif;
-    font-size: 5rem;
+    font-size: 4.5rem;
     display: inline-block;
     color:beige;
     border: solid black;
@@ -84,13 +85,16 @@ h1 {
     font-size: 3.5rem;
     margin: 2.5rem;
     text-align: center;
-    transform: rotate(-7deg);
+    transform: rotate(-6deg);
     padding: 0 0 2rem 0;
 }
 h2 {
-    padding: 1.75rem 0 0 0 ;
+    padding: 1.5rem 0 0 0;
 }
 
+h3 { 
+    margin: 0 0 1rem 0;
+}
 .expand {
     font-size: .3rem;
     text-decoration: none;
@@ -102,6 +106,10 @@ h2 {
     font-style: italic;
 }
 
+nav {
+    
+    
+}
 /*general setup*/
 * {
     box-sizing: border-box;}
@@ -126,6 +134,13 @@ nav{
 
 nav a{
     text-decoration: none;
+    
+}
+
+nav a:active {
+    text-decoration: line-through .125rem;
+    transform: rotate(3deg);
+    color: black;
 }
 
 a {
@@ -168,6 +183,7 @@ aside {
 }
 
 aside p {
+    margin: 1rem 0 0 0;
     border-bottom: .125rem solid black;
     padding-bottom: 1.5rem;
 }
@@ -190,7 +206,7 @@ figure {
 }
 
 .article-image {
-    width: 40%;
+    width: 38%;
     float: left;
     margin-right: 1rem;
 }
@@ -234,12 +250,11 @@ footer {
     padding-top: 4rem;
 }
 footer p {
-    text-align: left;
+    float: left;
     font-size: .75rem;
 }
 
 footer figcaption p {
-    text-align: right;
+    float: right;
     font-size: .75rem;
 }
-
